implemetacao de regra, aonde um incidente so pode ser criado por um usuario existente